--- a/loop-2-3/style.css
+++ b/loop-2-3/style.css
@@ -11,21 +11,19 @@ body {
   background-color: #fff;
   padding: 1.2em 0.3em;
   border-radius: 0.3em;
-  overflow: scroll;
+  overflow: hidden;
 }
-.slider::-webkit-scrollbar {
-  display: none;
-}
+
 .content {
   display: flex;
   flex-flow: row nowrap;
   width: auto;
+  transition: 0.5s ease-in-out;
 }
 .card {
   height: 8em;
   border-radius: 0.3em;
   margin: 0 0.3em;
-  padding: 0 0.3em;
   scroll-snap-align: start;
   position: relative;
 }
@@ -78,10 +76,8 @@ body {
 }
 .btn-prev {
   left: 0em;
+  display: none;
 }
 .btn-next {
   right: -2.4em;
-}
-.btn-disable {
-  display: none;
 }
